chore: java 11 version of the benchmark